--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-handlebars": "^3.0.0",
     "express-sessions": "^1.0.6",
     "passport": "^0.4.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "pg-promise": "^8.4.6"
   }
 }
