--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Play with emotions",
   "main": "index.js",
   "scripts": {
-    "test": "nyc tape ./test/*.js | tap-spec",
+    "test": "nyc tape ./src/tests/*.js | tap-spec",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "start": "nodemon server.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "express-handlebars": "^3.0.0",
     "express-sessions": "^1.0.6",
     "passport": "^0.4.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "serve-favicon": "^2.5.0"
   }
 }
