--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport": "^0.4.0",
     "pg": "^7.4.3",
     "pg-promise": "^8.4.6",
+    "sequelize": "^4.38.0",
     "serve-favicon": "^2.5.0"
   }
 }
