--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
     "helmet": "^3.13.0",
     "morgan": "^1.9.0",
