--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tape": "^4.9.1"
   },
   "dependencies": {
+    "algorithmia": "^0.3.10",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "env2": "^2.2.2",
@@ -38,7 +39,7 @@
     "express-sessions": "^1.0.6",
     "passport": "^0.4.0",
     "pg": "^7.4.3",
-    "serve-favicon": "^2.5.0",
-    "pg-promise": "^8.4.6"
+    "pg-promise": "^8.4.6",
+    "serve-favicon": "^2.5.0"
   }
 }
